# PromptSanitizer

./: .gitignore  BUILD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  build-linux.sh  build-macos.sh  build.bat  build.sh  package-lock.json  package.json
apps/tauri/: DESIGN_SYSTEM.md  THEME_GUIDE.md  index.html  package-lock.json  package.json
apps/tauri/src/: App.vue  main.ts  styles.css  types.ts
apps/tauri/src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
apps/tauri/src-tauri/icons/: .gitkeep  icon.icns
apps/tauri/src-tauri/src/: main.rs
apps/tauri/src/components/: AppContent.vue  ConfigPanel.vue  CustomSelect.vue  FindingsList.vue  ImagePanel.vue  MainPanel.vue  ReportView.vue
docs/: building.md  development.md  privacy.md  protocol.md  usage.md
engine/go/: go.mod
engine/go/cmd/: main.go
engine/go/internal/detector/: detector.go  detector_test.go
engine/go/internal/engine/: engine.go
engine/go/internal/sanitizer/: sanitizer.go
engine/go/pkg/types/: types.go
engine/go/testdata/: golden.json  sample.txt
